src/app/modules/admin/page/cv-full/cv-full.component.scss
.resume-wrapper {
  //overflow: hidden;
  height: 100%;
  width: 100%;

  .resumeDiv {
    height: 100vh;
    // overflow-y: auto;
    padding: 0 0 15px 0;
    display: flex;
    justify-content: center;
  }
}

.actions-wrapper {
  display: flex;
  flex-direction: column;
  gap: 10px;
  position: fixed;
  z-index: 3;
  right: 2rem;
  top: 2rem;
}

.back-btn__wrapper{
  display: flex;
  justify-content: center;
  flex: 1 1 100%;
  margin-bottom: .5rem;
}
.back-btn{
  font-size: 1.6rem;
  width: 20rem;
  display: flex;
  align-items: center;
  justify-content: center;
  mat-icon{
    font-size: 2rem;
    line-height: 1.2;
  }
}

.resume-wrapper {

}
.resume-inner{
  // height: calc(100vh - 61px);
  height: 100%;
   overflow-y: auto;
  display: flex;
  gap: 2rem;
  padding: 15px;
  justify-content: center;
  }
  
  resume-template-builder{
    display: block;
    // overflow-y: auto;
    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
  
  
  }  
  :host::ng-deep #resume{
    box-shadow: none !important;
   min-height: auto !important;
   min-width: 700px;
   background-color: #fff;
      // padding-bottom: 2rem;
    }

    :host::ng-deep {
       resume-template-builder {
         #resume {
           @media screen and (max-width: 1151px) {
             max-width: 100%;
             zoom: 0.9;
           }
     
           @media screen and (max-width: 754px) {
             max-width: 100%;
             // zoom: .9;
     
             .first-name {
               font-size: 2.8rem;
             }
     
             .last-name {
               font-size: 2.8rem;
             }
           }
     
           @media screen and (max-width: 900px) {
             max-width: 100%;
             zoom: 0.9;
           }
           @media screen and (max-width: 800px) {
            max-width: 100%;
            zoom: 0.58;
          }
          @media screen and (max-width: 700px) {
            max-width: 100%;
            zoom: 0.75;
          }
    
          @media screen and (max-width: 650px) {
            max-width: 100%;
            zoom: 0.73;
          }
    
          @media screen and (max-width: 600px) {
            max-width: 100%;
            zoom: 0.68;
          }
    
          @media screen and (max-width: 575px) {
            max-width: 100%;
            zoom: 0.63;
          }
    
          @media screen and (max-width: 550px) {
            max-width: 100%;
            zoom: 0.58;
          }
    
          @media screen and (max-width: 520px) {
            max-width: 100%;
            zoom: 0.53;
          }
    
          @media screen and (max-width: 500px) {
            max-width: 100%;
            zoom: 0.48;
          }
    
          @media screen and (max-width: 450px) {
            max-width: 100%;
            zoom: 0.43;
          }
         }
       }
     }

     :host-context(.open-side-bar--content) :host::ng-deep {
      #resume {
             @media screen and (max-width: 1650px) {
          width: 100%;
          zoom: normal ;
        }
        @media screen and (max-width: 1430px) {
          width: 100%;
          // zoom: .9;
        }
        @media screen and (max-width: 1100px) {
          max-width: 100%;
          zoom: 0.9;
        }
        @media screen and (max-width: 1000px) {
          max-width: 100%;
          zoom: 0.85;
        }

    
        @media screen and (max-width: 950px) {
          max-width: 100%;
          zoom: 0.78;
        }
    
    
        @media screen and (max-width: 900px) {
          max-width: 100%;
          zoom: 0.7;
        }
        @media screen and (max-width: 850px) {
          max-width: 100%;
          zoom: 0.6;
        }
        @media screen and (max-width: 800px) {
          max-width: 100%;
          zoom: 0.58;
        }
        @media screen and (max-width: 700px) {
          max-width: 100%;
          zoom: 0.75;
        }
  
        @media screen and (max-width: 650px) {
          max-width: 100%;
          zoom: 0.73;
        }
  
        @media screen and (max-width: 600px) {
          max-width: 100%;
          zoom: 0.68;
        }
  
        @media screen and (max-width: 575px) {
          max-width: 100%;
          zoom: 0.63;
        }
  
        @media screen and (max-width: 550px) {
          max-width: 100%;
          zoom: 0.58;
        }
  
        @media screen and (max-width: 520px) {
          max-width: 100%;
          zoom: 0.53;
        }
  
        @media screen and (max-width: 500px) {
          max-width: 100%;
          zoom: 0.48;
        }
  
        @media screen and (max-width: 450px) {
          max-width: 100%;
          zoom: 0.43;
        }
    
       
      }
    
    }

